@@ -2,6 +2,7 @@ Revision history for firebird_fdw
 
 1.2.0	2020-??-??
 	- Add table/column option "quote_identifier"
+	- Add function firebird_fdw_server_options()
 	- Prevent tables defined as queries from being set as "updatable = 'true'"
 	- Prevent crash on attempted COPY operation (PostgreSQL 11 and later)
 
